# fono

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  deny.toml  how-it-thinks.html  index.html  install  llms.txt  robots.txt  rust-toolchain.toml  rustfmt.toml  site.webmanifest  sitemap.xml
crates/fono/: Cargo.toml  build.rs
crates/fono-assistant/: Cargo.toml
crates/fono-assistant/src/: anthropic_chat.rs  factory.rs  gemini_live.rs  history.rs  lib.rs  llama_local.rs  openai_compat_chat.rs  sse.rs  traits.rs
crates/fono-audio/: Cargo.toml
crates/fono-audio/src/: capture.rs  devices.rs  envelope.rs  lib.rs  mute.rs  playback.rs  pulse.rs  resample.rs  silence_watch.rs  sink.rs  speaker.rs  stream.rs  trim.rs  vad.rs  wake_registry.rs  wakeword.rs  wpctl.rs
crates/fono-bench/: Cargo.toml  README.md
crates/fono-bench/benches/: orchestrator.rs
crates/fono-bench/examples/: gen_equivalence_fixtures.rs
crates/fono-bench/scripts/: fetch-fixtures.sh
crates/fono-bench/src/: assistant_factual.rs  assistant_tool_use.rs  capabilities.rs  equivalence.rs  fakes.rs  fixtures.rs  lib.rs  polish_text.rs  report.rs  runner.rs  tts_bench.rs  wav.rs  wer.rs
crates/fono-bench/tests/: capability_skip.rs  latency_smoke.rs  two_gate_verdict.rs
crates/fono-core/: Cargo.toml
crates/fono-core/examples/: brain_tap_bench.rs  brain_trace_dump.rs  filter_probe.rs
crates/fono-core/src/: api_keys.rs  brain_tap.rs  budget.rs  config.rs  correction.rs  critical_notify.rs  error.rs  history.rs  hwcheck.rs  languages.rs  lib.rs  llama_backend.rs  llama_gen.rs  locale.rs  notify.rs  openrouter_attribution.rs  paths.rs  prompt_cache.rs  provider_catalog.rs  providers.rs  screen_capture.rs  secrets.rs  speakers.rs  turn_trace.rs  vk_loader_shim.rs  voice_discovery.rs  voice_palette.rs  voice_resolver.rs  vulkan_probe.rs  wav.rs
crates/fono-download/: Cargo.toml
crates/fono-download/src/: lib.rs
crates/fono-hotkey/: Cargo.toml
crates/fono-hotkey/examples/: probe.rs
crates/fono-hotkey/src/: detect.rs  fsm.rs  gnome_gsettings.rs  lib.rs  listener.rs  parse.rs  portal.rs  xerror.rs
crates/fono-http/: Cargo.toml
crates/fono-http/src/: body.rs  emit.rs  lib.rs  request_id.rs  sse.rs  timings.rs
crates/fono-inject/: Cargo.toml
crates/fono-inject/src/: classifier.rs  clipboard_probe.rs  focus.rs  inject.rs  lib.rs  permissions.rs  terminal.rs  wayland_probe.rs  xtest_paste.rs  xtest_type.rs
crates/fono-inject/tests/: clipboard_smoke.rs
crates/fono-ipc/: Cargo.toml
crates/fono-ipc/src/: lib.rs
crates/fono-llm/: Cargo.toml
crates/fono-llm/src/: anthropic.rs  defaults.rs  factory.rs  lib.rs  llama_local.rs  openai_compat.rs  registry.rs  traits.rs
crates/fono-mcp-server/: Cargo.toml
crates/fono-mcp-server/src/: lib.rs  protocol.rs  relevance.rs  server.rs  summarize.rs  transport.rs  voice_io.rs
crates/fono-mcp-server/src/tools/: confirm.rs  listen.rs  mod.rs  screen.rs  speak.rs  summarize.rs
crates/fono-net/: Cargo.toml
crates/fono-net-codec/: Cargo.toml
crates/fono-net-codec/src/: arm.rs  fono.rs  frame.rs  lib.rs  wyoming.rs
crates/fono-net/src/: auth.rs  lib.rs
crates/fono-net/src/discovery/: advertiser.rs  browser.rs  mod.rs  txt.rs
crates/fono-net/src/llm_server/: access_log.rs  audio.rs  messages.rs  mod.rs  ollama.rs  openai.rs  proxy.rs
crates/fono-net/src/web_settings/: mod.rs
crates/fono-net/src/web_settings/assets/: app.css  app.js  index.html
crates/fono-net/src/wyoming/: mod.rs  server.rs
crates/fono-net/tests/: discovery_round_trip.rs  llm_server_round_trip.rs  web_settings_round_trip.rs  wyoming_server_round_trip.rs  wyoming_wake_round_trip.rs
crates/fono-overlay/: Cargo.toml
crates/fono-overlay/examples/: brain_mockups.rs  cortex_frame_bench.rs  cortex_gallery.rs
crates/fono-overlay/src/: backend.rs  cortex.rs  lib.rs  r3d.rs  real.rs  renderer.rs
crates/fono-overlay/src/backends/: macos.rs  mod.rs  noop.rs  wayland_layer_shell.rs  wayland_shm.rs  windows.rs  winit_x11.rs
crates/fono-polish/: Cargo.toml
crates/fono-polish/src/: anthropic.rs  defaults.rs  factory.rs  lib.rs  llama_local.rs  openai_compat.rs  registry.rs  traits.rs
crates/fono-stt/: Cargo.toml
crates/fono-stt/src/: cartesia.rs  deepgram.rs  deepgram_streaming.rs  defaults.rs  elevenlabs.rs  factory.rs  gemini.rs  groq.rs  groq_streaming.rs  lang.rs  lang_cache.rs  lib.rs  openai.rs  openrouter.rs  rate_limit_notify.rs  registry.rs  speechmatics.rs  streaming.rs  traits.rs  vk_loader_shim.rs  whisper_local.rs  wyoming.rs
crates/fono-stt/tests/: wyoming_round_trip.rs
crates/fono-tray/: Cargo.toml
crates/fono-tray/src/: backend_linux.rs  backend_macos.rs  backend_windows.rs  lib.rs  menu.rs
crates/fono-tts/: Cargo.toml  build.rs
crates/fono-tts/assets/espeak-core/: phondata
crates/fono-tts/src/: cartesia.rs  deepgram.rs  defaults.rs  discovery.rs  elevenlabs.rs  english_only_fallback.rs  espeak.rs  factory.rs  gemini.rs  kokoro.rs  lib.rs  local.rs  local_router.rs  openai.rs  openai_compat.rs  piper.rs  piper_local.rs  sentence_split.rs  speechmatics.rs  streaming.rs  traits.rs  voices.rs  wyoming.rs
crates/fono-tts/src/supertonic/: chunker.rs  config.rs  engine.rs  frontend.rs  mod.rs  nfkd_table.rs  style.rs
crates/fono-tts/voices/: catalog.json
crates/fono-update/: Cargo.toml
crates/fono-update/src/: lib.rs
crates/fono/examples/: list_cloud_models.rs  smoke_assistant.rs  smoke_realtime_live.rs
crates/fono/src/: agent_setup.rs  agents.rs  api_key_auth.rs  assistant.rs  audio_recovery.rs  cli.rs  daemon.rs  doctor.rs  install.rs  key_probe.rs  lib.rs  live.rs  main.rs  models.rs  session.rs  speak_stream.rs  variant.rs  vulkan_probe.rs  wake.rs  wizard.rs
crates/fono/src/install/: linux.rs  macos.rs  mod.rs  windows.rs
crates/fono/tests/: live_pipeline.rs  local_backends_coexist.rs  pipeline.rs  provider_switching.rs  wizard_primary_flow.rs  wizard_selection.rs
packaging/crates-io/: Cargo.toml  README.md
packaging/crates-io/src/: main.rs
(+3600 files in other folders)
