[workspace]
resolver = "2"
members = [
    "crates/fono",
    "crates/fono-core",
    "crates/fono-audio",
    "crates/fono-stt",
    "crates/fono-tts",
    "crates/fono-llm",
    "crates/fono-assistant",
    "crates/fono-hotkey",
    "crates/fono-inject",
    "crates/fono-tray",
    "crates/fono-overlay",
    "crates/fono-ipc",
    "crates/fono-download",
    "crates/fono-update",
    "crates/fono-bench",
    "crates/fono-net-codec",
    "crates/fono-net",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-only"
authors = ["Bogdan Rădulescu <bogdan@nimblex.net>"]
homepage = "https://github.com/bogdanr/fono"
repository = "https://github.com/bogdanr/fono"
readme = "README.md"
keywords = ["voice", "dictation", "stt", "whisper", "llm"]
categories = ["command-line-utilities", "multimedia::audio"]

# Shared dependency pins. Member crates opt in via `dep = { workspace = true }`.
# Many of these are not yet imported by any stub crate; they are listed here so
# future phases (see `docs/plans/2026-04-24-fono-design-v1.md`) only need to
# touch the member crate's `[dependencies]` table, never re-pin versions.
[workspace.dependencies]
# Async runtime / utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Error handling + logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# CLI / UX
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Paths / dirs
directories = "5.0"

# HTTP (rustls only — never OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart", "http2"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Audio
cpal = "0.15"
rubato = "0.15"

# STT / LLM local engines
whisper-rs = { version = "0.16", features = ["tracing_backend"] }
# Pinned to our fork's `feature/static-runtime-linkage` branch via the
# `[patch.crates-io]` section below until utilityai/llama-cpp-rs#1015
# and the follow-up static-runtime linkage work merge. `default-features =
# false` drops the `common` feature, which strips the unused llama.cpp
# `common/` static library (`libcommon.a` ~14 MB + wrapper archive ~10 MB)
# plus the OpenAI-compat / chat-template / JSON-schema-to-grammar code
# paths from the build. We keep OpenMP for local LLM performance, but link
# libgomp statically so `cargo build --release -p fono` does not produce a
# runtime `libgomp.so.1` dependency. `static-stdcxx` also puts a static
# `libstdc++` on the link line early enough for GNU ld to satisfy C++
# references from both llama.cpp and whisper.cpp without retaining a
# dynamic `libstdc++.so.6` `NEEDED` entry.
llama-cpp-2 = { version = "0.1", default-features = false, features = ["openmp", "static-openmp", "static-stdcxx"] }

# Desktop integration.
#
# Tray icon: pure-Rust StatusNotifierItem implementation via `ksni`
# (Unlicense, public-domain). Replaces `tray-icon`'s libappindicator /
# GTK3 backend, which dragged libgtk-3, libgdk-3, libcairo, libpango,
# libgio-2.0, libglib-2.0, and libgdk_pixbuf into `NEEDED` — none of
# them needed for SNI, all of them disqualifying for the
# "no shared libraries" promise on the static-musl ship build.
# `ksni` speaks the SNI / `com.canonical.dbusmenu` D-Bus protocols
# directly via `zbus`; KDE Plasma, GNOME (with the SNI shell
# extension), sway+waybar, hyprland+waybar, i3+i3status, xfce4-panel,
# and lxqt-panel all host SNI natively.
ksni = { version = "0.3", default-features = false, features = ["tokio"] }
global-hotkey = "0.6"
crossbeam-channel = "0.5"
enigo = "0.2"
winit = "0.30"
softbuffer = "0.4"
notify-rust = "4.11"

# Vulkan runtime probe used by the CPU variant to detect whether the
# host has libvulkan.so.1 + at least one Vulkan-capable device, so the
# upgrade UX (`fono doctor`, the wizard, the tray menu) can offer to
# switch to the GPU release variant. `loaded` opens libvulkan at runtime
# via `libloading`; we deliberately do NOT use `linked` (would add
# libvulkan.so.1 to the CPU variant's NEEDED set and fail the gate).
ash = { version = "0.38", default-features = false, features = ["loaded"] }

# Focus detection
x11rb = { version = "0.13", features = ["xtest"] }

# Misc
tempfile = "3.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.20"
regex = "1.11"

# mDNS / DNS-SD autodiscovery (Slice 4 of the network plan). Pure Rust,
# dual MIT/Apache-2.0, no Avahi/Bonjour FFI. Surface area we touch:
# `ServiceDaemon::new`, `browse`, `register`, `unregister`. Used only
# inside `fono-net` behind the `discovery` feature.
mdns-sd = "0.13"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Noise lints we explicitly silence workspace-wide (per the design plan's
# "pedantic minus noise lints" directive).
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
unnecessary_debug_formatting = "allow"
unused_async = "allow"
needless_pass_by_value = "allow"
large_stack_arrays = "allow"
large_futures = "allow"
future_not_send = "allow"
missing_const_for_fn = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
needless_question_mark = "allow"
writeln_empty_string = "allow"
non_std_lazy_statics = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# Pin both `llama-cpp-2` and its `-sys` crate to our fork branch that
# adds opt-out `common` plus static GNU runtime linkage cargo features.
# PR upstream for `common` is https://github.com/utilityai/llama-cpp-rs/pull/1015;
# this `[patch]` block goes away once both changes merge. Both crates must
# point at the same revision so cargo resolves the workspace consistently.
[patch.crates-io]
llama-cpp-2 = { git = "https://github.com/bogdanr/llama-cpp-rs.git", branch = "feature/static-runtime-linkage" }
llama-cpp-sys-2 = { git = "https://github.com/bogdanr/llama-cpp-rs.git", branch = "feature/static-runtime-linkage" }

# Default release profile: stripped + thin-LTO. Trades ~30s of extra build
# time for a ~5 MB binary-size win (debug symbols + cross-crate inlining)
# without sacrificing the dev iteration loop. Packaging CI uses the
# `release-slim` profile below for the final ~3 MB squeeze (fat-LTO + 1
# codegen unit). End-user binary on a typical x86_64 box: ~19 MB default
# release, ~15 MB release-slim. The bulk is whisper.cpp + llama.cpp +
# ggml machine code (~11 MB of `.text`) which is non-negotiable for SOTA
# local inference.
[profile.release]
strip = "symbols"
lto = "thin"

# Slim release profile used by packaging/release CI (see release.yml).
[profile.release-slim]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
