[workspace]
resolver = "2"
members = [
    "crates/fono",
    "crates/fono-core",
    "crates/fono-audio",
    "crates/fono-stt",
    "crates/fono-tts",
    "crates/fono-polish",
    "crates/fono-assistant",
    "crates/fono-hotkey",
    "crates/fono-inject",
    "crates/fono-tray",
    "crates/fono-overlay",
    "crates/fono-ipc",
    "crates/fono-download",
    "crates/fono-update",
    "crates/fono-bench",
    "crates/fono-http",
    "crates/fono-net-codec",
    "crates/fono-net",
    "crates/fono-mcp-server",
]
# The crates.io publish stub shares the `fono` package name and must not be part
# of the workspace build/test graph (see packaging/crates-io/Cargo.toml).
exclude = ["packaging/crates-io"]

[workspace.package]
version = "0.15.0"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-only"
authors = ["Bogdan Rădulescu <bogdan@nimblex.net>"]
homepage = "https://github.com/bogdanr/fono"
repository = "https://github.com/bogdanr/fono"
readme = "README.md"
keywords = ["voice", "dictation", "stt", "whisper", "polish"]
categories = ["command-line-utilities", "multimedia::audio"]

# Shared dependency pins. Member crates opt in via `dep = { workspace = true }`.
# Many of these are not yet imported by any stub crate; they are listed here so
# future phases (see `docs/plans/2026-04-24-fono-design-v1.md`) only need to
# touch the member crate's `[dependencies]` table, never re-pin versions.
[workspace.dependencies]
# Async runtime / utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Error handling + logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# CLI / UX
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Paths / dirs
directories = "5.0"

# HTTP (rustls only — never OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart", "http2"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# HTTP *server* stack for the local LLM inference API (OpenAI- +
# Ollama-compatible) served from `fono-net`, and the future web-config UI.
# `hyper` + these helpers are ALREADY in the dependency graph via
# `reqwest`'s client stack — verified with `cargo tree`: `hyper`,
# `hyper-util`, `http-body-util`, and `bytes` are all present, while
# `axum` and `matchit` are absent. Taking them as direct deps and turning
# on hyper's `server` + `http1` features is therefore NET-ZERO on the
# crate graph (no new crates, only additional already-compiled code
# paths), so it does not trip the binary-size dependency rule. A
# hand-rolled router keeps the surface tiny; axum was deliberately NOT
# adopted (see ADR 0036). Gated behind `fono-net`'s `llm-server` feature.
hyper = { version = "1.9", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.7"

# Persistence
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Audio
cpal = "0.15"
rubato = "0.15"

# STT / LLM local engines
whisper-rs = { version = "0.16", features = ["tracing_backend"] }
# Both of our patches landed upstream and ship in the current crates.io
# release: the `common` opt-out (utilityai/llama-cpp-rs#1015) and the
# `static-openmp` static-runtime linkage feature. The fork and the
# `[patch.crates-io]` block are gone; we now track the published crate.
# `default-features = false` drops the `common` feature, which strips the
# unused llama.cpp `common/` static library (`libcommon.a` ~14 MB +
# wrapper archive ~10 MB) plus the OpenAI-compat / chat-template /
# JSON-schema-to-grammar code paths from the build. We keep OpenMP for
# local LLM performance, but link libgomp statically so
# `cargo build --release -p fono` does not produce a runtime
# `libgomp.so.1` dependency. `static-stdcxx` also puts a static
# `libstdc++` on the link line early enough for GNU ld to satisfy C++
# references from both llama.cpp and whisper.cpp without retaining a
# dynamic `libstdc++.so.6` `NEEDED` entry.
llama-cpp-2 = { version = "0.1", default-features = false, features = ["openmp", "static-openmp", "static-stdcxx"] }
# Raw bindings sibling of llama-cpp-2 (same version line, already in the
# binary's graph via llama-cpp-2 — net-zero on size). Used only by
# `fono-core::brain_tap` to reach `cb_eval` on the context params and the
# ggml tensor accessors, which the safe wrapper does not expose. No
# features: it inherits whatever the llama-cpp-2 build enables.
llama-cpp-sys-2 = { version = "0.1", default-features = false }
# Local voice stack (TTS/VAD/wake-word/streaming-STT) runs on ONNX Runtime
# via `ort`. RELEASE and CI builds link a pinned, minimally-built
# `libonnxruntime.a` STATICALLY via `ORT_LIB_LOCATION` (see ADR 0032,
# `docs/binary-size.md`, and `scripts/build-onnxruntime-minimal.sh`), never
# the full ~19 MiB CDN runtime. `download-binaries` is kept ON as a
# *developer fallback*: `ort-sys` consults `ORT_LIB_LOCATION` first and, when
# it is set (every CI/release job — `.github/workflows/{ci,release}.yml` run
# `scripts/fetch-onnxruntime.sh` and export it), SKIPS the download entirely
# and links our pinned static lib. Only a bare local `cargo build`/IDE build
# with the var unset takes the download path, so `tts-local` being default no
# longer breaks `cargo build` out of the box. The feature pulls three
# BUILD-only deps into `ort-sys` (`ureq`/`lzma-rust2`/`hmac-sha256`); they run
# in its build script and never link into the `fono` binary, so the shipped
# artefact (size + four-entry `NEEDED`) is unchanged — enforced by the
# `size-budget` gate. `api-24` matches onnxruntime 1.24.2, the version
# `size-budget` gate. `api-21` is the highest ONNX Runtime API level we
# use: onnxruntime 1.24.2 (the version `ort-sys` 2.0.0-rc.12 pins) provides
# up to api-24, but we deliberately cap at 21 to keep `ort`'s `api-22`
# *Model Editor API* code path uncompiled. That path (graph editing, which
# Fono never does) probes `GetModelEditorApi` while reading a session's
# input/output metadata; against our `--minimal_build` `libonnxruntime.a`
# the probe returns "Model Editor API is not supported in a minimal build"
# and leaks that line to stderr on every `fono speak` session create. We
# only ever call `CreateSession`/`Run`/tensor APIs (all < api-22), so
# capping at 21 loses nothing and silences the noise. Gated behind
# `fono-tts`'s `tts-local` feature, default in the `fono` binary as of
# 2026-06-02.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-21", "download-binaries", "tls-rustls"] }
# Pure-Rust eSpeak NG port — grapheme→IPA phonemization, the front half of
# the local Piper TTS pipeline (ADR 0032). GPL-3.0-or-later, no C, no system
# `libespeak-ng`. We deliberately enable *no* `bundled-data-*` features: the
# language-independent G2P core (~102 KiB) is embedded directly in fono-tts
# (`src/espeak.rs`) and per-language `<lang>_dict` files download from the
# voice mirror at runtime (ADR 0033), keeping the binary independent of how
# many languages we ship. `default-features = false` also drops the
# `install-espeak-ng-shim` binary guard.
espeak-ng = { version = "0.1.2", default-features = false }

# Desktop integration.
#
# Tray icon: pure-Rust StatusNotifierItem implementation via `ksni`
# (Unlicense, public-domain). Replaces `tray-icon`'s libappindicator /
# GTK3 backend, which dragged libgtk-3, libgdk-3, libcairo, libpango,
# libgio-2.0, libglib-2.0, and libgdk_pixbuf into `NEEDED` — none of
# them needed for SNI, all of them disqualifying for the
# "no shared libraries" promise on the static-musl ship build.
# `ksni` speaks the SNI / `com.canonical.dbusmenu` D-Bus protocols
# directly via `zbus`; KDE Plasma, GNOME (with the SNI shell
# extension), sway+waybar, hyprland+waybar, i3+i3status, xfce4-panel,
# and lxqt-panel all host SNI natively.
ksni = { version = "0.3", default-features = false, features = ["tokio"] }
global-hotkey = "0.6"
crossbeam-channel = "0.5"
enigo = "0.2"
# winit is X11-only on Linux for Fono. We deliberately disable its
# Wayland feature set (`default-features = false` strips `wayland`,
# `wayland-csd-adwaita`, etc.) because the Wayland brokenness around
# `xdg_toplevel` placement and softbuffer's hardcoded XRGB8888 buffer
# format made the winit-on-Wayland path unusable for our overlay use
# case. The Wayland-native wlr-layer-shell backend in
# `fono-overlay/src/backends/wayland_layer_shell.rs` drives Wayland
# directly via smithay-client-toolkit on the compositors that support
# it; everywhere else (notably GNOME / Mutter) selection falls
# through to this X11 backend via Xwayland. The `rwh_06` feature is
# what softbuffer 0.4.x requires from winit's raw-window-handle
# integration.
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
softbuffer = "0.4"
notify-rust = "4.11"

# Raw OS bindings for the macOS hardware probe (sysctlbyname +
# host_statistics64 in fono-core::hwcheck). Already in the dependency
# graph on every target (dirs-sys, getrandom, …), so this edge adds no
# binary size; it is only pulled directly by macOS builds.
libc = "0.2"

# Vulkan runtime probe used by the CPU variant to detect whether the
# host has libvulkan.so.1 + at least one Vulkan-capable device, so the
# upgrade UX (`fono doctor`, the wizard, the tray menu) can offer to
# switch to the GPU release variant. `loaded` opens libvulkan at runtime
# via `libloading`; we deliberately do NOT use `linked` (would add
# libvulkan.so.1 to the CPU variant's NEEDED set and fail the gate).
ash = { version = "0.38", default-features = false, features = ["loaded"] }

# Focus detection
x11rb = { version = "0.13", features = ["xtest"] }

# Misc
tempfile = "3.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.20"
regex = "1.11"
# Pure-Rust offline language identification (trigram model, MIT). Used by
# the local TTS router to pick the right per-language Piper voice when the
# caller supplies no `lang` hint (e.g. the MCP `fono.speak` path), with
# detection constrained to the user's configured `general.languages` so
# short replies stay accurate. No network, no system deps.
whatlang = "0.16"

# mDNS / DNS-SD autodiscovery (Slice 4 of the network plan). Pure Rust,
# dual MIT/Apache-2.0, no Avahi/Bonjour FFI. Surface area we touch:
# `ServiceDaemon::new`, `browse`, `register`, `unregister`. Used only
# inside `fono-net` behind the `discovery` feature.
mdns-sd = "0.13"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Noise lints we explicitly silence workspace-wide (per the design plan's
# "pedantic minus noise lints" directive).
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
unnecessary_debug_formatting = "allow"
unused_async = "allow"
needless_pass_by_value = "allow"
large_stack_arrays = "allow"
large_futures = "allow"
future_not_send = "allow"
missing_const_for_fn = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
needless_question_mark = "allow"
writeln_empty_string = "allow"
non_std_lazy_statics = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# Default release profile: stripped + thin-LTO. Trades ~30s of extra build
# time for cross-crate inlining without sacrificing the dev iteration loop.
# This profile is for `cargo run` and local benchmarking; it is *not* what
# the project ships. Packaging CI and the release workflow both build
# `release-slim` below, which adds fat-LTO + codegen-units=1 + panic=abort
# for a ~7 MiB additional squeeze (most of which is `.eh_frame` /
# `.gcc_except_table` unwind tables deleted by `panic=abort`).
#
# Measured 2026-05-15 on x86_64-unknown-linux-gnu, default features:
#   release       : 28,687,744 B = 27.35 MiB
#   release-slim  : 21,175,680 B = 20.19 MiB  (ADR 0022 budget = 20 MiB)
#
# The bulk is whisper.cpp + llama.cpp + ggml machine code which is
# non-negotiable for SOTA local inference.
[profile.release]
strip = "symbols"
lto = "thin"

# Slim release profile used by packaging/release CI (see release.yml).
[profile.release-slim]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
# Optimise Rust codegen for size, not speed. This shrinks the shipped
# binary by ~5 MiB (measured 2026-07-01: 26.60 → 21.64 MiB,
# x86_64-unknown-linux-gnu, default features) with the four-entry NEEDED
# allowlist intact. It touches ONLY the Rust glue (async providers,
# realtime, tokio/reqwest/serde, the ort/whisper-rs/llama-cpp-2 bindings)
# — the inference hot paths are C/C++ compiled by cc/cmake with their own
# flags (`-Os` scaffolding + cmake-gated high-opt kernels, see
# `.cargo/config.toml`), so STT/LLM/TTS throughput is unaffected. `"z"`
# saves a further ~1.25 MiB but disables Rust-side auto-vectorisation more
# aggressively; `"s"` is the safe sweet spot.
opt-level = "s"

[patch.crates-io]
# Our fork of llama-cpp-sys-2 0.1.150. It carries one extra commit that makes
# llama.cpp fall back gracefully instead of aborting when the fused Gated Delta
# Net support check sees an unnamed node. Without it, loading gemma-4 (a hybrid
# GDN model) hits a GGML_ASSERT at context creation and the process dies, because
# on the CPU reserve path those nodes still have ggml's default node_N names.
# The fork disables the fused path and uses the non-fused one instead, which is
# no slower on CPU (see ggml-org/llama.cpp#24298). llama-cpp-2 stays on the
# published crate and links this patched sys. Pinned to an exact rev; drop this
# once the fix lands in a published llama-cpp-2 release.
llama-cpp-sys-2 = { git = "https://github.com/bogdanr/llama-cpp-rs", rev = "da311b05a71557940fb505fc811002181e6fa7d8" }
