[package]
name = "fono-assistant"
description = "Streaming chat assistant trait and backends for Fono's voice-assistant path."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Cloud chat clients ship in default builds. Each cloud feature is
# gated independently so a user can keep the binary small if they
# only run one provider.
default = ["openai-compat", "anthropic", "realtime"]
# OpenAI-compatible chat completions: covers Cerebras, Groq, OpenAI,
# OpenRouter, Ollama. SSE streaming via reqwest's `stream` feature.
openai-compat = ["dep:reqwest", "dep:fono-http"]
# Embedded llama.cpp local assistant for GGUF chat models.
llama-local = ["dep:llama-cpp-2", "dep:encoding_rs", "fono-core/llama-local"]
# Hardware acceleration features — forward to llama-cpp-2 / its sys
# crate. Off by default; mirrors `fono-polish`'s local LLM acceleration story.
accel-cuda = ["llama-local", "llama-cpp-2/cuda"]
accel-metal = ["llama-local", "llama-cpp-2/metal"]
accel-vulkan = ["llama-local", "llama-cpp-2/vulkan", "fono-core/accel-vulkan"]
accel-rocm = ["llama-local", "llama-cpp-2/rocm"]
# Anthropic Messages API streaming.
anthropic = ["dep:reqwest", "dep:fono-http"]
# Realtime / speech-to-speech backends (Gemini Live BidiGenerateContent over
# WebSocket). `tokio-tungstenite` is already in the binary graph via
# fono-stt/fono-net/fono-mcp-server, so this edge is net-zero on binary size.
realtime = ["dep:tokio-tungstenite"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, optional = true }
fono-http = { path = "../fono-http", optional = true }
llama-cpp-2 = { workspace = true, optional = true }
encoding_rs = { version = "0.8", optional = true }
tokio-tungstenite = { workspace = true, optional = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
