[package]
name = "fono-audio"
description = "Audio capture, VAD, and resampling for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Native cpal backend. Off by default on Linux release builds so the
# default binary does not link ALSA/libasound; keep it available for
# macOS, Windows, and explicit bare-ALSA Linux builds.
cpal-backend = ["dep:cpal"]
# Voiced-frame broadcast stream + segment-boundary events used by the
# live-dictation pipeline. Plan R2.
streaming = []

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true, optional = true }
rubato = { workspace = true }
tokio = { workspace = true }
